--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,7 +10,7 @@
 
 
 
-body { margin: 0 auto; font-family: verdana, arial, helvetica, sans-serif; font-size: 62.5%; color: #000000; background-image: url(/web/20161106104917im_/http://www.themainplacethriftstore.com/includes/templates/becaberry/images/home-bg.jpg); background-repeat: repeat-x; background-color: #fff; margin-top: 5px; }
+body { margin: 0 ; font-family: verdana, arial, helvetica, sans-serif; font-size: 62.5%; color: #000000; background-image: url(/web/20161106104917im_/http://www.themainplacethriftstore.com/includes/templates/becaberry/images/home-bg.jpg); background-repeat: repeat-x; background-color: #fff; margin-top: 5px; }
 
 a img {border: none; }
 
